--- a/updated/index.html
+++ b/updated/index.html
@@ -30,11 +30,11 @@
 
     <div class="leftcolumn">
 	       <ul>
-	           <li><a href="">Overview of the WWW </a> </li>
-	           <li><a href="">HTTP</a></li>
-	           <li><a href="">URL</a></li>
-	           <li><a href="">HTML</a></li>
-               <li><a href="">HTML Processor</a></li>
+	           <li><a href="#Container">Overview of the WWW </a> </li>
+	           <li><a href="#Container1">HTTP</a></li>
+	           <li><a href="#Container2">URL</a></li>
+	           <li><a href="#Container3">HTML</a></li>
+               <li><a href="#Container4">HTML Processor</a></li>
            </ul>
 </div>
    
@@ -48,7 +48,18 @@
            <b>The World Wide Web</b> is a global combination of all resources in the internet that uses Hypertext Transfer Protocol(HTTP). Tim-Berners Lee, father of the web, the inventor of the web and director of the World Wide Web Consortium(W3C) which was founded in September 1994 at the Massachusetts Institute of Technology with support from Defense Advanced Research Projects Agency (DARPA) and the European Commission.
             The World Wide Web accesses info over the internet and it sends data over the network. Basic Advantages of the internet is when you are connected to the devices. 
            Internet is a global system of interconnected computer network that uses Internet Protocol Suite(TCP/IP) and writes via computers accessed over the internet.</p>
-    </div>
+	</div>  
+	
+	<div id="Container1">
+	</div>
+	<div id="Container2">
+	</div>
+	<div id="Container3">
+	</div>
+	<div id="Container4">
+	</div>
+	
+            
  
     <div id="footer">
         
@@ -59,5 +70,7 @@
 </html>
 
 
+
+	
 
 	
